--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tribute page</title>
+
   <link rel="stylesheet" href="styles.css" type="text/css">
   <link rel="icon" href="elun-musk.png" type="image/png">
   <!-- google fonts -->
@@ -29,23 +30,28 @@
     <article id="bio">
 
 
-      <h4>Here's a short glance on his life:</h4>
+      <h3>Here's a short glance on his life:</h3>
       <ul>
         <li><strong>1971</strong> born in south africa</li>
         <li><strong>2000</strong> married Justine Wilson</li>
         <li><strong>2002</strong> founded SpaceX</li>
         <li><strong>2008</strong> became CEO of Tesla</li>
-        <li><strong>2015</strong> co-founded OpenAI, a nonprofit research company that promotes friendly artificial intelligence.
+        <li><strong>2015</strong> co-founded OpenAI, a nonprofit research company that promotes friendly artificial
+          intelligence.
         </li>
-        <li><strong>2019</strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis excepturi explicabo, quos ipsum ab
+        <li><strong>2019</strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis excepturi explicabo,
+          quos ipsum ab
           distinctio
           vero fugiat molestiae nulla dolor atque voluptates nisi temporibus magnam mollitia debitis obcaecati
           laboriosam
           aliquid.</li>
-        <li><strong>2020</strong> ipsum dolor sit amet consectetur adipisicing elit. Eius atque dolor reiciendis asperiores rem placeat
+        <li><strong>2020</strong> ipsum dolor sit amet consectetur adipisicing elit. Eius atque dolor reiciendis
+          asperiores rem placeat
           perferendis impedit ut, veniam pariatur nostrum corrupti amet et eligendi quis cupiditate! Similique quibusdam
           optio rem magni obcaecati deserunt, officia quis eaque exercitationem assumenda.</li>
-        <li><strong>2028</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quasi aliquid laudantium accusamus, esse ex ullam repudiandae? Doloribus exercitationem quibusdam, voluptates natus cumque nulla quod consequuntur, aspernatur, doloremque dolorem fuga!</li>
+        <li><strong>2028</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quasi aliquid laudantium
+          accusamus, esse ex ullam repudiandae? Doloribus exercitationem quibusdam, voluptates natus cumque nulla quod
+          consequuntur, aspernatur, doloremque dolorem fuga!</li>
 
 
       </ul>
