--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@
         <li><strong>2028</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quasi aliquid laudantium
           accusamus, esse ex ullam repudiandae? Doloribus exercitationem quibusdam, voluptates natus cumque nulla quod
           consequuntur, aspernatur, doloremque dolorem fuga!</li>
-
-
       </ul>
     </article>
+
+    <blockquote
+      cite="https://www.inc.com/larry-kim/50-innovation-amp;-success-quotes-from-spacex-founder-elon-musk.html">"I do
+      think there is a lot of potential if you have a compelling product and people are willing to pay a
+      premium for that. I think that is what Apple has shown. You can buy a much cheaper cell phone or laptop, but
+      Apple's product is so much better than the alternative, and people are willing to pay that premium."</blockquote>
+      <p>--Elon Musk</p>
 
     <p>you can read more about him on his <a id="tribute-link" target="_blank"
         href="https://en.wikipedia.org/wiki/Elon_Musk">Wikipedia
